# muro-music

./: .gitignore  AGENTS.md  README.md  REFACTORING_PLAN.md  package-lock.json  package.json  session-ses_41f4.md  tailwind.config.js  vite.config.ts
docs/: COVER_ART_IMPLEMENTATION.md  METADATA_SPECS.md  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_backfill_search_text.sql  003_add_bpm.sql
src-tauri/src/: backfill.rs  cover_art.rs  import.rs  lib.rs  main.rs  playback.rs  search.rs
src/components/: index.ts
src/components/layout/: AppLayout.tsx  DetailPanel.tsx  (+5 more)
src/contexts/: DragSessionContext.tsx
src/data/: library.ts
src/hooks/: index.ts  useAppPreferences.ts  useAudioPlayback.ts  useColumns.ts  useColumnsMenu.ts  useDbPath.ts  useDetailPanel.ts  useFileImport.ts  useInboxOperations.ts  useLibraryCommands.ts  useLibraryInit.ts  useLibraryView.ts  useNativeDrag.ts  usePlayTracking.ts  usePlaybackControls.ts  usePlaylistDrag.ts  usePlaylistOperations.ts  useQueueOperations.ts  useQueuePanel.ts  useSelection.ts  useSidebarData.ts  useSidebarPanel.ts  useTrackAnalysis.ts  useTrackEdit.ts  useTrackRatings.ts
src/i18n/: de.json  en.json  index.ts
src/lib/: analyzer.ts
src/stores/: index.ts  libraryStore.ts  playbackStore.ts  recentlyPlayedStore.ts  uiStore.ts
src/types/: index.ts  library.ts
src/utils/: database.ts  dbPath.ts  importApi.ts  playbackApi.ts  search.ts  storage.ts  tauriDb.ts  trackSorting.ts  viewRouting.ts
(+8 files in other folders)
