[package]
name = "muro-music"
version = "0.1.0"
description = "A cross-platform desktop music player"
authors = ["you"]
edition = "2021"
default-run = "muro-music"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muro_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
lofty = "0.19"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
rodio = { version = "0.19", features = ["symphonia-all"] }
symphonia = { version = "0.5.4", features = ["all"] }
souvlaki = "0.7"
parking_lot = "0.12"
lazy_static = "1.4"
